--- a/Payoo-project/index.html
+++ b/Payoo-project/index.html
@@ -4,8 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Payoo Project</title>
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@5.0.0-beta.8/daisyui.css" rel="stylesheet" type="text/css" />
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
+  <header class="bg-slate-800">
+    <section class="bg-slate-200 max-w-md min-h-screen mx-auto">
+      <div>
+        <img src="assets/bg.png" alt="">
+        <img src="assets/Group.png" alt="">
+      </div>
+    </section>
+  </header>
   
 </body>
 </html>
